--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -66,6 +66,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --primary: #3AF24D;
+  --primary-rgb: 35, 199, 253;
   --primary-foreground: #031328;
   --primary-hover: #0AD208;
   --primary-disabled: #434651;
