--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -65,17 +65,17 @@
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
-  --primary: #3AF24D;
+  --primary: #23C7FD;
   --primary-rgb: 35, 199, 253;
   --primary-foreground: #031328;
-  --primary-hover: #0AD208;
+  --primary-hover: #1AA4D0;
   --primary-disabled: #434651;
   --primary-foreground-disabled: #A3A2A8;
   --secondary: transparent;
   --secondary-foreground: #FFFFFF;
   --secondary-border: #3A3A3A;
   --secondary-foreground-border: #3A3A3A;
-  --secondary-foreground-hover: #3AF24D;
+  --secondary-foreground-hover: #23C7FD;
   --secondary-disabled: #434651;
   --secondary-foreground-disabled: #A3A2A8;
   --tertiary: #FFFFFF;
@@ -87,7 +87,7 @@
   --tertiary-disabled: #434651;
   --tertiary-foreground-disabled: #A3A2A8;
   --link-foreground: #FFFFFF;
-  --link-foreground-hover: #3AF24D;
+  --link-foreground-hover: #23C7FD;
   --link-foreground-disabled: #A3A2A8;
   --muted: oklch(0.97 0 0);
   --muted-foreground: #707179;
@@ -110,6 +110,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --card-background: #1F1F1F;
 }
 
 .dark {
@@ -145,6 +146,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+  --card-background: #1F1F1F;
 }
 
 @layer base {
