fix(card.tsx): update CardFooterButtonProps type for CardMini.FooterButton for better type safety style(index.css): add missing semicolon to text-lg class for consistency in CSS styling

--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -137,7 +137,7 @@
   }
 
   .text-lg {
-    @apply  not-italic text-[14.72px] leading-[22.08px] tracking-[0] 
+    @apply  not-italic text-[14.72px] leading-[22.08px] tracking-[0];
   }
 
   .text-2xl {
