--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -138,7 +138,7 @@
   }
 
   .text-sm {
-    @apply ont-normal text-[0.88rem] leading-[150%] tracking-[0.005em];
+    @apply font-normal text-[0.88rem] leading-[150%] tracking-[0.005em];
   }
 
   .text-base  {
