--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -65,7 +65,7 @@
 :root {
   --radius: 0.625rem;
   --background: #0C0E12;
-  --foreground: oklch(0.145 0 0);
+  --foreground: oklch(0.145 0 0); ;
   --card: #1A1A1A;
   --card-hover: #1F1F1F;
   --card-foreground: oklch(0.145 0 0);
