--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -57,6 +57,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-neutral-400: #A3A3A3;
   --color-neutral-900: #1C1C1E;
   --color-neutral-950: #141415;
   --color-neutral-gray: #707179;
