fix(avatar): update Avatar component to accept className prop for better customization fix(avatar): correct spelling of 'quarternary' to 'quaternary' in CSS variables refactor(stories): remove unnecessary parameters from story metadata for multiple components to streamline code fix(stories): update titles for Input OTP, Progress Bar, Radio Group, and Score Bar components for consistency in naming

--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -64,7 +64,7 @@
   --color-gray-50: #13161B;
   --color-gray-200: #373A41;
   --color-gray-700: #CECFD2;
-  --color-quarternary: #94979C;
+  --color-quaternary: #94979C;
   --color-avatar: #22262F;
 }
 
