--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -57,7 +57,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-  --color-neutral-400: #A3A3A3;
+  --color-neutral-400: #555C6A;
   --color-neutral-900: #1C1C1E;
   --color-neutral-950: #141415;
   --color-neutral-gray: #707179;
@@ -140,18 +140,13 @@
     @apply font-normal not-italic text-[0.75rem] leading-[1.1rem] tracking-[0] text-center ;
   }
 
-  .text-medium {
-   @apply font-medium text-sm leading-5; 
-  }
-
-  
   .card-shadow {
     @apply border-2 border-[var(--card)];
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.16);
   }
 
   .info-text {
-    @apply text-[var(--primary)]  font-medium text-xs leading-[15px];
+    @apply text-[var(--primary)]  font-medium text-sm leading-[1rem];
   }
 
   .text-yellow-20 {
