feat(table): add Table component with customizable rows and headers for better data presentation docs(README): update documentation to include instructions for adding Table component style(index.css): add new CSS variables for table styling to enhance UI consistency
feat(registry): add Table component with dependencies and file references to the registry for better organization and accessibility

--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -58,6 +58,7 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-neutral-400: #555C6A;
+  --color-neutral-500: #474C56;
   --color-neutral-900: #1C1C1E;
   --color-neutral-950: #141415;
   --color-neutral-gray: #707179;
@@ -74,6 +75,7 @@
   --foreground: oklch(0.145 0 0);
   --card: #1A1A1A;
   --card-hover: #1F1F1F;
+  --table-border: #1F1F1F;
   --card-foreground: oklch(0.145 0 0);
   --menu-card-background-hover: #2C2C2C;
   --popover: oklch(1 0 0);
