--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -57,8 +57,10 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-neutral-300: #626B7E;
   --color-neutral-400: #555C6A;
   --color-neutral-500: #474C56;
+  --color-neutral-800: #232527;
   --color-neutral-900: #1C1C1E;
   --color-neutral-950: #141415;
   --color-neutral-gray: #707179;
