feat(table): update table component to support row selection and improve styling feat(table.stories): modify story data to reflect new table structure and labels test(table.test): add test for row selection functionality in table component style(table): enhance selected row styling for better visibility

--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -69,6 +69,7 @@
   --color-gray-700: #CECFD2;
   --color-quaternary: #94979C;
   --color-avatar: #22262F;
+  --color-primary-200: #076D90;
 }
 
 :root {
